# internal/app/admin/auth/dto/request.go
@@ -1,0 +1,6 @@
+package dto
+
+type LoginUserDTO struct {
+	Email    string `json:"email" binding:"required"`
+	Password string `json:"password" binding:"required"`
+}
